--- a/test/fixtures/identities.yml
+++ b/test/fixtures/identities.yml
@@ -1,2 +1,2 @@
-sam: 3c5c32c8348930667d269d1b516691ff18cb04f3
-clint: 41a5f020d4b6df8df8e9d63742a8408a9ab01a0f
+sam: $2a$04$PT/sVk.Y7r7nhdRrKrLiv.pKl1d1OhNzeL6xoDIEAIvTiyVuOH5ay
+clint: $2a$04$iVNh.zPtF/0R5AUeWT.Oe.Nwehk8.SyuuzTePD.dDMP2fgfdr7x3m
